--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,1 @@
-<!-- <router-outlet></router-outlet> -->
-<app-django-index></app-django-index>
-<app-inscription-form></app-inscription-form>
+<router-outlet></router-outlet>
